--- a/LigaproIsaacTrujillo/Views/Home/Index.cshtml
+++ b/LigaproIsaacTrujillo/Views/Home/Index.cshtml
@@ -3,6 +3,5 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Bienvenidos a la Pagina de la Liga Pro del Ecuador</h1>
 </div>
