--- a/LigaproIsaacTrujillo/Views/Home/Index.cshtml
+++ b/LigaproIsaacTrujillo/Views/Home/Index.cshtml
@@ -1,7 +1,11 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "LIGAPRO";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Bienvenidos a la Pagina de la Liga Pro del Ecuador</h1>
+    <h1 class="display-4">Bienvenidos a la Pagina de Incripcion de Equipos, 
+        Jugadores,Estadios para la Liga Pro del Ecuador</h1>
+
 </div>
+
+
