Cambios de estilos y colores en el layout

--- a/LigaproIsaacTrujillo/Views/Shared/_Layout.cshtml
+++ b/LigaproIsaacTrujillo/Views/Shared/_Layout.cshtml
@@ -7,6 +7,23 @@
     <title>@ViewData["Title"] - LIGAPRO</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <head>
+        <style>
+            .navbar {
+                background-color: darkblue !important; 
+            }
+
+                .navbar a {
+                    color: white !important; 
+                }
+
+
+            body {
+                background-color: yellow;
+            }
+        </style>
+    </head>
+
 </head>
 
 <body>
