--- a/LigaproIsaacTrujillo/Views/Home/Index.cshtml
+++ b/LigaproIsaacTrujillo/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Bienvenidos a la Pagina de Incripcion de Equipos, 
+    <h1 class="display-4">Bienvenidos a la Página de Incripción de Equipos, 
         Jugadores,Estadios para la Liga Pro del Ecuador</h1>
 
 </div>
