--- a/LigaproIsaacTrujillo/Views/Home/Index.cshtml
+++ b/LigaproIsaacTrujillo/Views/Home/Index.cshtml
@@ -5,6 +5,28 @@
 <div class="text-center">
     <h1 class="display-4">Bienvenidos a la Página de Incripción de Equipos, 
         Jugadores,Estadios para la Liga Pro del Ecuador</h1>
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-50" src="https://lh3.googleusercontent.com/p/AF1QipOwwMzePHJ1jgJC2kTOpIAoZulspwQL1m5onjHe=s680-w680-h510" alt="First slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-50" src="https://www.eluniverso.com/resizer/jYxh1wtmERV4-HhXsyGn4P5vtR4=/arc-anglerfish-arc2-prod-eluniverso/public/XO5HYIG5Y7PU6OXBCZEHO6KEAE.jpg" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-500" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTcLGhyOul3mEGbYBurchbpN53scnrIInLU2w&s" alt="Third slide">
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+    <p>Conoce mas <a href="https://ecuabet.com/">Link para ir a la pagina Oficial de la LIGAPRO</a>.</p>
 
 </div>
 
