--- a/LigaproIsaacTrujillo/Views/Shared/_Layout.cshtml
+++ b/LigaproIsaacTrujillo/Views/Shared/_Layout.cshtml
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
+  
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,9 +9,10 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <head>
+
         <style>
             .navbar {
-                background-color: darkblue !important; 
+                background-color: yellow !important; 
             }
 
                 .navbar a {
@@ -19,7 +21,7 @@
 
 
             body {
-                background-color: yellow;
+                background-color:white;
             }
         </style>
     </head>
@@ -29,7 +31,10 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Ligapro</a>
+            <a class="navbar-brand" href="#">Ligapro
+                <img src="https://a.espncdn.com/combiner/i?img=/i/leaguelogos/soccer/500/1944.png" alt="Imagen de ejemplo" width="50"  height="50">
+
+            </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -50,6 +55,7 @@
                 </ul>
             </div>
         </nav>
+
     </header>
 
     <div class="container body-content">
