Cambio de colores

--- a/LigaproIsaacTrujillo/Views/Shared/_Layout.cshtml
+++ b/LigaproIsaacTrujillo/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
             }
 
                 .navbar a {
-                    color: white !important; 
+                    color: black !important; 
                 }
 
 
